# EMS

./: .dockerignore  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE.md  README.md  docker-compose.test.yml  docker-compose.yml
conf/: INSTALL.old  README.md  configure  configure.in  ems_version.h  gen_svn_rev.sh  hdf5test.sh  install-sh  makefile.in  mkinstalldirs
ext/: README.md
ext/jigsaw/: README.md
ext/jigsaw/src/: makefile
ext/swan/src/: Makefile  SwanCheckGrid.ftn90  couple2compas.ftn90  macros.inc  platform.pl  swancom3.ftn  swancom5.ftn  swanmain.ftn  swanpre1.ftn  swanpre2.ftn  switch.pl  version.txt
hooks/: README.md  build  post_push
lib/: README.md  doxy.config  doxy_intro.c  ems.c  makefile.in
lib/geodesy/: geodetic.c  mapproj.c
lib/geom/: poly.c  spline.c
lib/grid/: cstmesh.c  ellipt_coord.c  gridangle.c  gridmetric.c  gridmisc.c  polar_coord.c  rect_coord.c  xytoij.c
lib/include/: baycentric.h  bilinear.h  coast.h  colourtable.h  csa.h  cstmesh.h  datafile.h  delaunay.h  ems.h  ems_conf.h.in  emsalloc.h  emslogger.h  emsmath.h  eqn_parser.h  errfn.h  grid.h  grid_utils.h  gridaverager.h  gridlib.h  gridmap.h  gridnodes.h  hash.h  hqueue.h  integrator.h  interp.h  istack.h  lagrange.h  lpi.h  lsql.h  lsqq.h  mapproj.h  meshes.h  minell.h  moon.h  nan.h  nanoflann_wrappers.h  ncw.h  nnai.h  nnpi.h  nrst.h  (+19 more)
lib/interp/: grid_entry.c  lagrange.c  meshes.c
lib/interp/csa/: csa.c
lib/interp/delaunay/: delaunay.c  nanoflann_wrappers.cpp  triangle.c
lib/interp/gridmap/: gridaverager.c  gridnodes.c
lib/interp/linear/: baycentric.c  bilinear.c
lib/interp/lsq/: svd.c
lib/interp/lsq_lin/: lsql.c
lib/interp/lsq_quad/: lsqq.c
lib/interp/misc/: grid_utils.c  minell.c  preader.c
lib/interp/nn/: nnai.c  nnbathy.c  nnpi.c
lib/interp/nrst/: nrst.c
lib/io/: coast.c  datafile.c  dfcoords.c  dfeval.c  emslogger.c  nc_buffered.cpp  ncw.c  poly_coast.c  prmfile.c  ptrack.c  tf_nc_cmr.c  tf_nc_cmr_tiled.c  tf_xyz_cmr.c  tiled_coast.c  timeseries.c  topo.c  topo_factory.c  topo_tile_misc.c  ts_serial.cpp
lib/math/: cfft.c  decay.c  diffusion.c  drandom.c  integrator.c  interp.c  nan.c  underwater.c  weight_fn.c
lib/misc/: colourtable.c  eqn_parser.cpp  error_handlers.c  hash.c  hqueue.c  istack.c  memory.c  moon.c  pointsourcesink.c  solar.c  standalone.c  string_utils.c  stringtable.c  time.c  tracer_utils.c
model/hd/: README.md  makefile.in
model/hd-us/: .project  README.md  makefile.in
model/hd-us/boundary/: bdrycond.c  bdryeval.c  bdryfuncs.c  boundaryio.c  riverflow.c  tide.c
model/hd-us/closure/: MY2-0.c  MY2-5.c  MY2-5_HAR.c  closure.c  constant.c  csanady.c  k-e-implicit.c  k-w-implicit.c
model/hd-us/control/: dp.c  dp_mpi.c  dp_none.c  dp_pthreads.c  dp_slave.c  globals.c  main.c  scheduler.c
model/hd-us/dassim/: da.c
model/hd-us/debug/: dbgfuncs.c  debug.c  printflags.c  totals.c
model/hd-us/density/: density.c  eos.c
model/hd-us/diagnostics/: means.c  monitor.c  run_setup.c
model/hd-us/ecology/: ecology.c  ecology_tracer_defaults.c  ecology_tracer_defaults.h
model/hd-us/forcings/: airtemp.c  cloud.c  crash.c  dhw.c  eta_relax.c  evap.c  forcings.c  heatflux.c  hftemp.c  light.c  patm.c  precip.c  regulate.c  rh.c  storm.c  swan.c  swr.c  vel_relax.c  webf.c  wetbulb.c  wind.c
model/hd-us/ginterface/: ginterface.c
model/hd-us/include/: autotracer.h  boundary.h  debug.h  dp.h  dumpfile.h  globals.h  hd.h  hd_macros.h  hd_params.h  proto.h  scheduler.h  sparse.h  timing.h
model/hd-us/inputs/: choosedump.c  meshes.c  opendump.c  readdump.c  readparam.c  readparam_r.c  readparam_t.c  sourcesink.c
model/hd-us/master/: hd_init.c  hd_step.c  pp.c  pp_us.c  preprocess.c  sigma.c
model/hd-us/misc/: filevars.c  index.c  messages.c  timing.c  tsfiles.c
model/hd-us/momentum/: advect.c  momentum.h  mommisc.c  mommix.c  vel2d.c  vel3d.c
model/hd-us/outputs/: closedump.c  createdump.c  df_mom.c  df_roms.c  df_sparse.c  df_ugrid.c  dumpdata.c  dumpfile.c  landfill.c  mom_grid.c  roms_grid.c  timeseries.c  writeatts.c  writedump.c
model/hd-us/particles/: pl.c  pt.c
model/hd-us/render/: render_globals.c  render_manager.c
model/hd-us/sediments/: sediments.c
model/hd-us/slaves/: any.cpp  transfers.c  windows.c  zoom.c
model/hd-us/tracers/: autotracer.c  load_tracer.c  regions.c  relaxation.c  reset.c  tracer_decay.c  tracer_info.c  tracers.c  transport.c
model/hd/boundary/: bdrycond.c  bdryeval.c  bdryfuncs.c  boundaryio.c  riverflow.c  tide.c
model/hd/closure/: MY2-0.c  MY2-5.c  MY2-5_HAR.c  closure.c  constant.c  csanady.c  k-e-implicit.c  k-w-implicit.c
model/hd/control/: dp.c  dp_mpi.c  dp_none.c  dp_pthreads.c  dp_slave.c  globals.c  main.c  scheduler.c
model/hd/dassim/: da.c
model/hd/debug/: dbgfuncs.c  debug.c  printflags.c  totals.c
model/hd/density/: density.c  eos.c
model/hd/diagnostics/: monitor.c  run_setup.c
model/hd/ecology/: ecology.c  ecology_tracer_defaults.c  ecology_tracer_defaults.h
model/hd/forcings/: airtemp.c  cloud.c  crash.c  dhw.c  eta_relax.c  evap.c  forcings.c  heatflux.c  hftemp.c  light.c  patm.c  precip.c  regulate.c  rh.c  storm.c  swr.c  vel_relax.c  webf.c  wetbulb.c  wind.c
model/hd/ginterface/: ginterface.c
model/hd/include/: boundary.h  debug.h  dp.h  dumpfile.h  globals.h  hd.h  hd_macros.h  hd_params.h  proto.h  scheduler.h  sparse.h  timing.h
model/hd/inputs/: choosedump.c  opendump.c  readdump.c  readparam.c  readparam_r.c  readparam_t.c  sourcesink.c
model/hd/master/: hd_init.c  hd_step.c  pp.c  preprocess.c  sigma.c
model/hd/misc/: filevars.c  index.c  messages.c  timing.c  tsfiles.c
model/hd/momentum/: advect.c  momentum.h  mommisc.c  mommix.c  vel2d.c  vel3d.c
model/hd/outputs/: closedump.c  createdump.c  df_mom.c  df_roms.c  df_sparse.c  df_ugrid.c  dumpdata.c  dumpfile.c  landfill.c  mom_grid.c  roms_grid.c  timeseries.c  writeatts.c  writedump.c
model/hd/particles/: pt.c
model/hd/render/: render.h  render_globals.c  render_manager.c
model/hd/sediments/: sediments.c
model/tests/: run-tests.sh
(+561 files in other folders)
